--- a/src/components/MissionLevelSelector/MissionLevelSelector.css
+++ b/src/components/MissionLevelSelector/MissionLevelSelector.css
@@ -60,6 +60,25 @@
   border: 2px solid #dddddd;
 }
 
+.MissionLevelSelector button.btn-mission-lvl:disabled {
+  filter: contrast(50%);
+}
+
+.MissionLevelSelector button.btn-mission-lvl:hover:disabled {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: 0.25s;
+}
+
+.MissionLevelSelector button.btn-mission-lvl:active:disabled {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: 0s;
+}
+
+.MissionLevelSelector button.active:disabled {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid #dddddd;
+}
+
 .MissionLevelSelector button.range1 {
   box-shadow: 1px 0px 4px 2px rgba(13, 161, 0, 0.75);
 }
@@ -78,12 +97,15 @@
 
 .MissionLevelSelector button.range5 {
   box-shadow: 0px 0px 4px 2px rgba(119, 0, 255, 0.5);
+  cursor: not-allowed;
 }
 
 .MissionLevelSelector button.range6 {
   box-shadow: 0px 0px 4px 2px rgba(255, 0, 242, 0.5);
+  cursor: not-allowed;
 }
 
 .MissionLevelSelector button.range7 {
   box-shadow: 0px 0px 4px 2px rgba(6, 250, 250, 0.5);
+  cursor: not-allowed;
 }
