--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@
 html, body, #app, #app>div {
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: #222222;
   color: #ffffff;
 }
 
 .App {
-  width: 100%;
+  width: 1260px;
   height: 100%;
   font-family: 'Helvetica', 'Arial', sans-serif;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25);
