--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -9,7 +9,6 @@
 
 .Details div#wrapper {
   height: 450px;
-  outline: 1px solid yellow;
 }
 
 .Details h3 {
@@ -21,57 +20,64 @@
 }
 
 .Details div#info-wrapper {
-  width: 500px;
+  width: 590px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   font-family: 'Roboto Mono', monospace;
   font-size: 14px;
+  margin-left: 8px;
 }
 
-.Details div#container-top {
+.Details div#details-grid {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(6, 98px);
   grid-template-rows: repeat(8, 40px);
+  border-radius: 16px;
 }
 
 .Details div#monster-name {
   grid-area: 1 / 1 / 2 / 3;
-  background-color: #555555;
   text-align: center;
   line-height: 40px;
   font-weight: 700;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  border-radius: 16px 0px 0px 0px;
+  background-color: #222222;
 }
 
 .Details div#level-key {
   grid-area: 2 / 1 / 3 / 2;
   text-align: center;
   line-height: 40px;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details div#class-key {
   grid-area: 2 / 2 / 3 / 3;
   text-align: center;
   line-height: 40px;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details div#level-value {
   grid-area: 3 / 1 / 4 / 2;
   text-align: center;
   line-height: 40px;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details div#class-value {
   grid-area: 3 / 2 / 4 / 3;
   text-align: center;
   line-height: 40px;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details img#card-image {
@@ -79,7 +85,15 @@
   height: 120px;
   grid-area: 1 / 3 / 4 / 4;
   object-fit: contain;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
+}
+
+.Details div#container-monster-image {
+  grid-area: 4 / 1 / 9 / 4;
+  outline: 2px solid #cccccc;
+  border-radius: 0px 0px 0px 16px;
+  background-color: #222222;
 }
 
 .Details img#monster-image {
@@ -88,40 +102,58 @@
   padding: 8px;
   grid-area: 4 / 1 / 9 / 4;
   object-fit: contain;
-  filter: drop-shadow(0px 0px 4px #eeeeee);
-  outline: 2px solid #eeeeee;
+  filter: drop-shadow(0px 0px 4px #cccccc);
 }
 
 .Details div#spawns-list {
   padding: 4px 0px 0px 8px;
   grid-area: 1 / 4 / 4 / 7;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  border-radius: 0px 16px 0px 0px;
+  background-color: #222222;
 }
 
 .Details div#bonuses-list {
   padding: 4px 0px 0px 8px;
   grid-area: 4 / 4 / 7 / 7;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details img#element-icon {
   width: 98px;
   height: 80px;
   grid-area: 7 / 6 / 9 / 7;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
   object-fit: scale-down;
+  border-radius: 0px 0px 16px 0px;
+  background-color: #222222;
 }
 
 .Details div#element-off {
   line-height: 40px;
   text-align: center;
   grid-area: 7 / 4 / 8 / 6;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
 }
 
 .Details div#element-def {
   line-height: 40px;
   text-align: center;
   grid-area: 8 / 4 / 9 / 6;
-  outline: 2px solid #eeeeee;
+  outline: 2px solid #cccccc;
+  background-color: #222222;
+}
+
+.Details div#spawns-caption {
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.Details div#bonuses-caption {
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: 700;
 }
