--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
 
-html, body, #app, #app>div {
+html, body, #root, #root>div {
+  min-width: 1400px;
   width: 100%;
   height: 100%;
   background-color: #222222;
@@ -8,16 +9,19 @@ html, body, #app, #app>div {
 }
 
 .App {
-  width: 1260px;
+  width: 100%;
   height: 100%;
-  font-family: 'Helvetica', 'Arial', sans-serif;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25);
   background-color: #222222;
+}
+
+.App div#wrapper {
+  width: 100%;
 }
 
 .App div#main {
   display: grid;
   gap: 0;
-  grid-template-columns: 600px 400px 400px;
+  grid-template-columns: 600px 800px;
   grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
 }
