--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -54,17 +54,17 @@
   z-index: 100;
 }
 
-.Map img.img-m1 {
+.Map img.img-joan, .Map img.img-pyungmoo, .Map img.img-yongan {
   width: 512px;
   height: 640px;
 }
 
-.Map img.img-m2 {
+.Map img.img-bokjung, .Map img.img-bakra, .Map img.img-jayang {
   width: 640px;
   height: 640px;
 }
 
-.Map img.img-seungryong, .Map img.img-yongbi, .Map img.img-sohan, .Map img.img-hwang, .Map img.img-fireland {
+.Map img.img-valley-of-seungryong, .Map img.img-yongbi-desert, .Map img.img-mount-sohan, .Map img.img-hwang-temple, .Map img.img-fireland {
   width: 640px;
   height: 640px;
 }
@@ -82,7 +82,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid #aaaaaa;
   border-radius: 18px 18px 18px 18px;
-  box-shadow: 0px 0px 4px 2px #aaaaaa;
+  box-shadow: 0px 0px 3px 1px #aaaaaa;
 }
 
 .Map button.btn-area:hover {
@@ -92,23 +92,22 @@
 
 .Map button.btn-joan, .Map button.btn-bokjung {
   border: 2px solid var(--chunjo);
-  box-shadow: 0px 0px 4px 2px var(--chunjo);
+  box-shadow: 0px 0px 3px 1px var(--chunjo);
 }
 
 .Map button.btn-pyungmoo, .Map button.btn-bakra {
   border: 2px solid var(--jinno);
-  box-shadow: 0px 0px 4px 2px var(--jinno);
+  box-shadow: 0px 0px 3px 1px var(--jinno);
 }
 
 .Map button.btn-yongan, .Map button.btn-jayang {
   border: 2px solid var(--shinsoo);
-  box-shadow: 0px 0px 4px 2px var(--shinsoo);
+  box-shadow: 0px 0px 3px 1px var(--shinsoo);
 }
 
 .Map img.img-map {
   min-width: 320px;
   min-height: 320px;
-  max-width: 1200px;
   max-height: 640px;
 }
 
