--- a/src/components/MonsterSelector/MonsterSelector.css
+++ b/src/components/MonsterSelector/MonsterSelector.css
@@ -12,10 +12,17 @@
   height: 200px;
 }
 
+.MonsterSelector div#container {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
 .MonsterSelector h3 {
+  display: inline-block;
   margin: 0;
   padding:  0 8px 0 8px;
-  width: calc(100% - 16px);
+  width: 90px;
   font-size: 20px;
   line-height: 36px;
 }
@@ -69,4 +76,28 @@
   background-color: rgba(229, 128, 255, 0.4);
   box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.5);
   border: 1px solid #dddddd;
+}
+
+.MonsterSelector div.caption-legend {
+  width: 14px;
+  height: 14px;
+  border: 1px solid #dddddd;
+  border-radius: 50%;
+}
+
+.MonsterSelector div.caption-text {
+  line-height: 36px;
+  font-size: 12px;
+  color: #bbbbbb;
+}
+
+.MonsterSelector div.caption-open-world {
+  background-color: rgba(0, 128, 128, 0.25);
+  margin-right: 4px;
+}
+
+.MonsterSelector div.caption-dungeon {
+  background-color: rgba(229, 128, 255, 0.25);
+  margin-left: 20px;
+  margin-right: 4px;
 }
