--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,16 @@ html, body, #root, #root>div {
   grid-template-columns: 600px 800px;
   grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
 }
+
+.App div.footer {
+  position: fixed;
+  bottom: 0;
+  width: 140px;
+  height: 20px;
+  background-color: #333;
+  line-height: 20px;
+  font-size: 16px;
+  text-align: center;
+  color: #bbb;
+  outline: 1px solid #555;
+}
