--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -48,7 +48,7 @@
   left: 0px;
   top: 0px;
   z-index: 50;
-  outline: 2px solid #cccccc;
+  outline: 2px solid #999999;
   border-radius: 16px;
 }
 
