--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,36 +1,31 @@
 .Header {
   width: 100%;
-  height: 60px;
+  height: 48px;
   background-color: #333333;
-  border-bottom: 2px solid #666666;
+  border-bottom: 1px solid #666666;
   margin-bottom: 8px;
 }
 
 .Header div#wrapper {
   display: flex;
   height: 100%;
-  align-items: center;
   justify-content: flex-start;
 }
 
 .Header div#container-language {
-  width: 100px;
-  height: 100%;
+  width: 80px;
   display: flex;
-  height: 100%;
   align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
+  padding-left: 4px;
 }
 
 .Header div#container-kingdom {
-  width: 190px;
-  height: 100%;
+  width: 160px;
   display: flex;
-  height: 100%;
   align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
+  padding-left: 4px;
 }
 
 .Header p.caption {
@@ -39,22 +34,23 @@
   margin: 0;
   line-height: 16px;
   font-size: 16px;
-  text-align: center;
-  font-weight: 700;
+  padding-left: 4px;
+  font-size: 12px;
+  color: #cccccc;
 }
 
 .Header button.btn-language {
-  width: 32px;
-  height: 24px;
+  width: 26px;
+  height: 20px;
   border: none;
   padding: 0;
   margin: 0 4px 0 4px;
 }
 
 .Header button.btn-kingdom {
-  width: 48px;
-  height: 24px;
-  background-size: 48px 24px;
+  width: 40px;
+  height: 20px;
+  background-size: 40px 20px;
   border: none;
   padding: 0;
   margin: 0 4px 0 4px;
