--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -187,6 +187,8 @@
   grid-area: 7 / 4 / 8 / 6;
   outline: 2px solid var(--border-color);
   background-color: #222222;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .Details div#element-def {
@@ -195,6 +197,8 @@
   grid-area: 8 / 4 / 9 / 6;
   outline: 2px solid var(--border-color);
   background-color: #222222;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .Details div#spawns-caption {
