--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -166,6 +166,11 @@
   background-color: var(--details-bg-color);
 }
 
+.Details div.info-bonus {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .Details div#container-element-icon {
   display: flex;
   align-items: center;
